# typst-oxide

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  justfile  lib.typ  typst.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: cache.rs  command.rs  index.rs  lib.rs  main.rs
src/parser/: labels.rs  metadata.rs  mod.rs  models.rs  wikilinks.rs
tests/: parser_tests.rs
